--- a/eva/Makefile
+++ b/eva/Makefile
@@ -16,6 +16,9 @@ simulate_multiple: compile
 simulate_multiple_valgrind: compile
 	valgrind ../cmake-build-debug/Etoile -i ./arcpkg/ACC5.Standard.arcpkg -o ./songs -b ./img/bg/1080 -p default --force
 
+simulate_lua: compile
+	../cmake-build-debug/Etoile -i ./arcpkg/ACC5.Standard.arcpkg -o ./songs -b ./img/bg/1080 -p default --force --lua ../src/aff_proc.lua
+
 all: compile
 
 .PHONY: compile
