make cross compile message more extinct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ if (DEBUG)
 endif ()
 
 if (XC_WIN)
-    message("Cross compiling for Windows...")
+    message("## Cross compiling for Windows...")
     set(CMAKE_SYSTEM_NAME Windows)
     set(CMAKE_C_COMPILER /usr/bin/i686-w64-mingw32-gcc)
     set(CMAKE_CXX_COMPILER /usr/bin/i686-w64-mingw32-g++)
@@ -82,7 +82,8 @@ add_executable(Etoile
         src/utils.h
         src/utils.c
         src/schem_index.h
-        src/schem_proj.h)
+        src/schem_proj.h
+        src/version.h)
 
 # link lib
 target_link_libraries(Etoile m) # Math
