remove some abundant options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,22 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.22)
 project(Etoile C)
 
-option(DEBUG "Source debug mode")
-option(TESTING "Testing switch")
-option(XC_WIN "Cross compile for Windows")
+option(DEBUG "Source debug mode" ON)
+option(TESTING "Testing switch" ON)
 
-set(DEBUG ON)
-set(TESTING ON)
-set(XC_WIN OFF)
-
-if (DEFINED ENV{RELEASE_MODE})
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
     set(DEBUG OFF)
     set(TESTING OFF)
-endif ()
-
-if (DEFINED ENV{XC_WIN})
-    set(XC_WIN ON)
 endif ()
 
 if (DEBUG)
     add_definitions(-DTEST_DEBUG)
 endif ()
 
-if (XC_WIN)
-    message("## Cross compiling for Windows...")
-    set(CMAKE_SYSTEM_NAME Windows)
-    set(CMAKE_C_COMPILER /usr/bin/i686-w64-mingw32-gcc)
-    set(CMAKE_CXX_COMPILER /usr/bin/i686-w64-mingw32-g++)
-endif ()
+#set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-static")
 
-set(CMAKE_C_COMPILER /usr/bin/cc)
-set(CMAKE_CXX_COMPILER /usr/bin/c++)
+unset(DEBUG CACHE)
+unset(TESTING CACHE)
 
 set(CMAKE_C_STANDARD 11)
 
@@ -69,7 +55,7 @@ pkg_check_modules(cyaml REQUIRED IMPORTED_TARGET libcyaml)
 pkg_check_modules(cjson REQUIRED IMPORTED_TARGET libcjson)
 
 ## MagickWand
-pkg_check_modules(MAGICKWAND REQUIRED IMPORTED_TARGET MagickWand)
+pkg_check_modules(MagickWand REQUIRED IMPORTED_TARGET MagickWand)
 
 ## lua
 pkg_check_modules(LUA REQUIRED IMPORTED_TARGET lua-5.4)
@@ -91,12 +77,12 @@ target_link_libraries(Etoile cargs)
 target_link_libraries(Etoile zip)
 target_link_libraries(Etoile cjson)
 target_link_libraries(Etoile cyaml)
-target_link_libraries(Etoile ${MAGICKWAND_LIBRARIES})
-target_include_directories(Etoile PUBLIC ${MAGICKWAND_INCLUDE_DIRS})
-target_compile_options(Etoile PUBLIC ${MAGICKWAND_CFLAGS_OTHER})
-target_link_libraries(Etoile ${LUA_LIBRARIES})
-target_include_directories(Etoile PUBLIC ${LUA_INCLUDE_DIRS})
-target_compile_options(Etoile PUBLIC ${LUA_CFLAGS_OTHER})
+target_link_libraries(Etoile ${MagickWand_LIBRARIES})
+target_include_directories(Etoile PUBLIC ${MagickWand_INCLUDE_DIRS})
+target_compile_options(Etoile PUBLIC ${MagickWand_CFLAGS_OTHER})
+target_link_libraries(Etoile ${lua_LIBRARIES})
+target_include_directories(Etoile PUBLIC ${lua_INCLUDE_DIRS})
+target_compile_options(Etoile PUBLIC ${lua_CFLAGS_OTHER})
 
 if (TESTING)
     include(CTest)
@@ -107,9 +93,9 @@ if (TESTING)
     target_link_libraries(utils zip)
     target_link_libraries(utils cjson)
     target_link_libraries(utils cyaml)
-    target_link_libraries(utils ${LUA_LIBRARIES})
-    target_include_directories(utils PUBLIC ${LUA_INCLUDE_DIRS})
-    target_compile_options(utils PUBLIC ${LUA_CFLAGS_OTHER})
+    target_link_libraries(utils ${lua_LIBRARIES})
+    target_include_directories(utils PUBLIC ${lua_INCLUDE_DIRS})
+    target_compile_options(utils PUBLIC ${lua_CFLAGS_OTHER})
 
     add_executable(test_utils test/test_utils.c)
     target_link_libraries(test_utils utils)
